--- a/css/style.css
+++ b/css/style.css
@@ -11,15 +11,18 @@ RESET
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    background-color: #f6f7f8;
+
 }
 
 
-    background-color: #f6f8f9;
+
 
 header {
     font-size: 50px;
     display: flex;
     align-items: center;
+    background-color: #f6f7f8;
 }
 
 h1 {
@@ -34,4 +37,16 @@ h1 {
     vertical-align: middle;
     height: 100px;
     width: 100px;
+}
+/*-------------------
+MAIN
+-------------------*/
+main{background-color: white;
+width: 800px;
+height: 1000px;
+margin: 0 auto;}
+
+.body{
+    background-color:#ccc;
+    font-family: "roboto", sans-serif;
 }
