--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ margin: 0 auto;}
 }
 .tag {
     display: inline-block;
-    color: #ffffff;
+    color: #000000;
     font-size: 14px;
     padding: 8px 12px;
     border-radius: 20px;
@@ -67,7 +67,7 @@ margin: 0 auto;}
     
         width: 75px; 
         height: 30px; 
-        background-color: #025389; /
+        background-color: #14AAF5; /
         border: 5px solid #2980b9; 
         border-radius: 50px; 
         display:inline-block; 
@@ -76,8 +76,62 @@ margin: 0 auto;}
         color: white; 
         font-size: 14px; 
         text-align: center; 
-    };
+    }
+    .tag-2{
+        width: 75px; 
+        height: 30px; 
+        background-color:#A3D116 ; /
+        border: 5px solid #2980b9; 
+        border-radius: 50px; 
+        display:inline-block; 
+        justify-content: center; /
+        align-items: right; 
+        color: white; 
+        font-size: 14px; 
+        text-align: center; 
+    }
+    .tag-3{width: 75px; 
+        height: 30px; 
+        background-color:#14AAF5 ; /
+        border: 5px solid #2980b9; 
+        border-radius: 50px; 
+        display:inline-block; 
+        justify-content: center; /
+        align-items: right; 
+        color: white; 
+        font-size: 14px; 
+        text-align: center;
 
+    }
+    .tag-4{width: 75px; 
+        height: 30px; 
+        background-color:#2CC6AB ; /
+        border: 5px solid #2980b9; 
+        border-radius: 50px; 
+        display:inline-block; 
+        justify-content: center; /
+        align-items: right; 
+        color: white; 
+        font-size: 14px; 
+        text-align: center;
+
+    }
+    .tag-5{width: 75px; 
+        height: 30px; 
+        background-color:#ab5de6 ; /
+        border: 5px solid #2980b9; 
+        border-radius: 50px; 
+        display:inline-block; 
+        justify-content: center; /
+        align-items: right; 
+        color: white; 
+        font-size: 14px; 
+        text-align: center;
+
+    }
+.tag-Write{
+    color:white ;
+}
 
 .tag-blue{
     color: blue;
@@ -103,15 +157,15 @@ h4{display: inline-block;
     margin-left: 50px;
 font-size: 30px;}
 
-}
+
 .circle {
-    width: 18px; 
-    height: 18px; 
-    background-color: transparent;
-    border: 1px solid black;
+    width: 20px; 
+    height: 20px; 
+    background-color:transparent;
+    border: 2px solid black;
     border-radius: 100%; 
     display: inline-block;
-    text-align: center; 
+    text-align: match-parent; 
 }
 
 .dt{
